--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -519,6 +519,10 @@
     <Compile Include="Migrations\201710051958596_cambiarRelacionUnoAUnoTerminalAlertConfig.Designer.cs">
       <DependentUpon>201710051958596_cambiarRelacionUnoAUnoTerminalAlertConfig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710062059595_quitarRelacionBD.cs" />
+    <Compile Include="Migrations\201710062059595_quitarRelacionBD.Designer.cs">
+      <DependentUpon>201710062059595_quitarRelacionBD.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
@@ -1155,6 +1159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710051958596_cambiarRelacionUnoAUnoTerminalAlertConfig.resx">
       <DependentUpon>201710051958596_cambiarRelacionUnoAUnoTerminalAlertConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710062059595_quitarRelacionBD.resx">
+      <DependentUpon>201710062059595_quitarRelacionBD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
