--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -929,6 +929,10 @@
     <Content Include="Scripts\jquery-3.1.1.min.map" />
     <Content Include="Views\Terminals\Sections\EditTerminalConfig.cshtml" />
     <Content Include="Views\Terminals\Sections\ConfigNotification.cshtml" />
+    <Content Include="Views\VaultCash\Create.cshtml" />
+    <Content Include="Views\VaultCash\Delete.cshtml" />
+    <Content Include="Views\VaultCash\Details.cshtml" />
+    <Content Include="Views\VaultCash\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
