VaultCash Partial View

--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -16,7 +16,7 @@
          connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagon;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30; "
          providerName="System.Data.SqlClient" />-->
     <!--<add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon3;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagonTest5;Integrated Security=True"
+    <add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
