Cambio en el Surcharge y se agrego duration Contract en Partner

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -215,11 +215,13 @@
     <Compile Include="Helpers\Cryptography.cs" />
     <Compile Include="Helpers\CustomRoleProvider.cs" />
     <Compile Include="Helpers\DateTimeValidation.cs" />
+    <Compile Include="Helpers\DateTimeValidationLesserThan.cs" />
     <Compile Include="Helpers\IAuditEntity.cs" />
     <Compile Include="Helpers\Initiate.cs" />
     <Compile Include="Helpers\ISoftDeleted.cs" />
     <Compile Include="Helpers\MapFrom.cs" />
     <Compile Include="Helpers\NumberOfCassettes.cs" />
+    <Compile Include="Helpers\PartnerFreeSurchargeFeeContractCalculation.cs" />
     <Compile Include="Helpers\PermissionsAssigned.cs" />
     <Compile Include="Helpers\Settled.cs" />
     <Compile Include="Helpers\Status.cs" />
@@ -278,9 +280,9 @@
     <Compile Include="Migrations\201708190230422_Updated2.Designer.cs">
       <DependentUpon>201708190230422_Updated2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201708191620206_AddNewPartner.cs" />
-    <Compile Include="Migrations\201708191620206_AddNewPartner.Designer.cs">
-      <DependentUpon>201708191620206_AddNewPartner.cs</DependentUpon>
+    <Compile Include="Migrations\AddNewPartner.cs" />
+    <Compile Include="Migrations\AddNewPartner.Designer.cs">
+      <DependentUpon>AddNewPartner.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201708191633395_UpdateulongToLong.cs" />
     <Compile Include="Migrations\201708191633395_UpdateulongToLong.Designer.cs">
@@ -549,6 +551,14 @@
     <Compile Include="Migrations\201710121826015_TerminalDefaultBankAccount.cs" />
     <Compile Include="Migrations\201710121826015_TerminalDefaultBankAccount.Designer.cs">
       <DependentUpon>201710121826015_TerminalDefaultBankAccount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710122043144_TerminalSurchargeFeeNewConfig.cs" />
+    <Compile Include="Migrations\201710122043144_TerminalSurchargeFeeNewConfig.Designer.cs">
+      <DependentUpon>201710122043144_TerminalSurchargeFeeNewConfig.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710122202388_FreeSurchargeFeePartnerContractDuration.cs" />
+    <Compile Include="Migrations\201710122202388_FreeSurchargeFeePartnerContractDuration.Designer.cs">
+      <DependentUpon>201710122202388_FreeSurchargeFeePartnerContractDuration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
@@ -873,6 +883,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Search.js" />
     <Content Include="Scripts\xpopulate.js" />
+    <Content Include="Uploads\logo.png" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -968,7 +979,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -1013,8 +1023,8 @@
     <EmbeddedResource Include="Migrations\201708190230422_Updated2.resx">
       <DependentUpon>201708190230422_Updated2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201708191620206_AddNewPartner.resx">
-      <DependentUpon>201708191620206_AddNewPartner.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\AddNewPartner.resx">
+      <DependentUpon>AddNewPartner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708191633395_UpdateulongToLong.resx">
       <DependentUpon>201708191633395_UpdateulongToLong.cs</DependentUpon>
@@ -1216,6 +1226,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710121826015_TerminalDefaultBankAccount.resx">
       <DependentUpon>201710121826015_TerminalDefaultBankAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710122043144_TerminalSurchargeFeeNewConfig.resx">
+      <DependentUpon>201710122043144_TerminalSurchargeFeeNewConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710122202388_FreeSurchargeFeePartnerContractDuration.resx">
+      <DependentUpon>201710122202388_FreeSurchargeFeePartnerContractDuration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
